# http-server-from-scratch-rs

./: Cargo.toml  README.md
src/: main.rs
src/http/: headers.rs  method.rs  mime_type.rs  mod.rs  path.rs  request.rs  response.rs  router.rs  serve.rs  server.rs  status_code.rs  utils.rs
src/http/traits/: read_from.rs  write_to.rs
static/: index.html
static/css/: main.css
static/js/: main.js
