[package]
name = "http-server-from-scratch"
version = "0.1.0"
authors = ["Giuliano Oliveira <giuliano.programador@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
